# rag_example

local_rag_streamlit/: 2206.01062v1.md  app.py  docling_exp.py  embed_docs.py  main.py  pyproject.toml
local_rag_streamlit/faiss_index/: index.faiss  index.pkl
